--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^4.4.1",
     "uuid": "^3.3.3"
   },
